Sistema de Facturacion
Creacion de la base de datos y el controlador clientes que usa vista de entity framework y sus metodos.

--- a/SistemaFactura2/SistemaFactura2/Web.config
+++ b/SistemaFactura2/SistemaFactura2/Web.config
@@ -71,4 +71,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <connectionStrings>
+    <add name="FinalSistemaF" connectionString="Data source=localhost;initial catalog=FacturaFinalS;User Id=sa;Password=123456" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
