--- a/SistemaFactura2/SistemaFactura2/SistemaFactura2.csproj
+++ b/SistemaFactura2/SistemaFactura2/SistemaFactura2.csproj
@@ -148,6 +148,10 @@
     <Compile Include="Migrations\202004072254305_v1.designer.cs">
       <DependentUpon>202004072254305_v1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202004080213075_v2.cs" />
+    <Compile Include="Migrations\202004080213075_v2.designer.cs">
+      <DependentUpon>202004080213075_v2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Categorias.cs" />
     <Compile Include="Models\Clientes.cs" />
@@ -250,6 +254,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202004072254305_v1.resx">
       <DependentUpon>202004072254305_v1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202004080213075_v2.resx">
+      <DependentUpon>202004080213075_v2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
